# biaolunmiao

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  agents.md  pyproject.toml
.agent/: agents.md
.agent/skills/: agents.md
.agent/workflows/: ios_feature_dev.md
.github/: GEMINI.md  agents.md
.github/workflows/: GEMINI.md  agents.md  (+3 more)
BianLunMiao/: AGENTS.md  BianLunMiaoApp.swift  ContentView.swift  GEMINI.md  agents.md
BianLunMiao.xcodeproj/: project.pbxproj
BianLunMiaoTests/: AGENTS.md  BianLunMiaoTests.swift  DesignGovernanceTests.swift  GEMINI.md  InboxScheduleProfileTests.swift  TeamJoinRequestFlowTests.swift  agents.md
BianLunMiaoUITests/: AGENTS.md  BianLunMiaoUITests.swift  BianLunMiaoUITestsLaunchTests.swift  GEMINI.md
app/: main.py
bianlunmiao-admin/: .gitignore  .vercelignore  README.md  agents.md  eslint.config.mjs  package.json  pnpm-lock.yaml
bianlunmiao-flutter/: agents.md
bianlunmiao-ios/: .gitattributes  .swiftformat  .swiftlint.yml  agents.md
docs/: AGENTS.md  GEMINI.md  agents.md
fal_inputs/: AGENTS.md  GEMINI.md  agents.md  team_page_duolingo_refresh.json
scripts/: ios_full_stability_check.sh  ios_maestro_poc.sh  ios_maestro_smoke_login.yaml  ios_maestro_smoke_tabs.yaml  ios_maestro_stg_tabs.yaml  ios_ui_lane.sh  prepare_prod_data_fixture.mjs  prepare_stg_data_fixture.mjs  seed_data.py
tests/: test.db  test_mvp_api.py
辩论喵-后端/: .env.example  .env.fc.prod.example  .gitignore  Dockerfile  Makefile  README.md  agents.md  alembic.ini  docker-compose.yml  pyproject.toml
(+452 files in other folders)
